<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.mvel</groupId>
	<artifactId>mvel2</artifactId>
	<packaging>jar</packaging>
	<version>2.5.4</version>

	<name>mvel</name>
	<url>https://github.com/mvel/mvel</url>
	<description>
		MVEL is a powerful expression language for Java-based applications.
		It provides a plethora of features and is suited for everything
		from the smallest property binding and extraction, to full blown scripts.
	</description>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<inceptionYear>2001</inceptionYear>
	<organization>
		<name>JBoss by Red Hat</name>
		<url>https://www.jboss.org/</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:mvel/mvel.git</connection>
		<url>scm:git:git@github.com:mvel/mvel.git</url>
		<developerConnection>scm:git:git@github.com:mvel/mvel.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/mvel/mvel/issues</url>
	</issueManagement>
	<contributors>
		<contributor>
			<name>MVEL Project Contributors</name>
			<url>https://github.com/mvel/mvel/graphs/contributors</url>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>1.0-beta-2</version>
			</extension>
		</extensions>

		<plugins>
			<!--plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>enforce</goal>
						</goals>
						<inherited>true</inherited>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>[21,)</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifestFile>META-INF/MANIFEST.MF</manifestFile>
						<manifest>
							<mainClass>org.mvel2.sh.Main</mainClass>
							<packageName>org.mvel2</packageName>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<!-- create source jar before shade. See https://github.com/mvel/mvel/issues/349 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createSourcesJar>true</createSourcesJar>
							<artifactSet>
								<includes>
									<include>org.ow2.asm:asm</include>
								</includes>
							</artifactSet>
							<relocations>
								<relocation>
									<pattern>org.objectweb.asm</pattern>
									<shadedPattern>org.mvel2.asm</shadedPattern>
								</relocation>
							</relocations>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<runOrder>random</runOrder>
					<childDelegation>true</childDelegation>
					<systemProperties>
						<property>
							<name>mvel.disable.jit</name>
							<value>true</value>
						</property>
						<property>
							<name>file.encoding</name>
							<value>UTF-8</value>
						</property>
						<property>
							<name>mvel.tests.quick</name>
							<value>true</value>
						</property>
					</systemProperties>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
						<include>**/UsageDemos.java</include>
					</includes>
					<excludes>
						<exclude>**/CompiledUnitTestEx.java</exclude>
						<exclude>**/PerfTest.java</exclude>
						<exclude>**/DroolsTest.java</exclude>
						<exclude>**/FailureTests.java</exclude>
						<exclude>**/PerformanceTest.java</exclude>
						<exclude>**/CompiledPerformanceTests.java</exclude>
						<exclude>**/MVELThreadTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>6.0.0</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>manifest</id>
						<phase>process-classes</phase>
						<goals>
							<goal>manifest</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<manifestLocation>META-INF</manifestLocation>
					<instructions>
						<Bundle-SymbolicName>org.mvel2</Bundle-SymbolicName>
						<Bundle-Name>mvel2</Bundle-Name>
						<Import-Package>
							sun.*;resolution:=optional, *
						</Import-Package>
						<Export-Package>
							org.mvel2.*
						</Export-Package>
					</instructions>
				</configuration>
			</plugin>

			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-report-plugin</artifactId>
			  <version>3.5.4</version>
			  <configuration>
				<!-- your configuration -->
			  </configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>.</directory>
				<includes>
					<include>build.properties</include>
				</includes>
			</resource>
			<resource>
			  <directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
		</plugins>
	</reporting>

	<dependencies>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.8</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<distributionManagement>
		<repository>
			<id>jboss-releases-repository</id>
			<name>JBoss Releases Repository</name>
			<url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>jboss-snapshots-repository</id>
			<name>JBoss Snapshot Repository</name>
			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>